style: fix accessibility contrast ratio of commento login button

--- a/hugo/themes/minimal-dc-mod/assets/css/main.scss
+++ b/hugo/themes/minimal-dc-mod/assets/css/main.scss
@@ -456,10 +456,8 @@ strong {
     margin-bottom: 0.5rem;
 }
 
-.comments .commento-root .commento-logged-container .commento-profile-button {
-    color: #535353;
-}
-
+.comments .commento-root .commento-logged-container .commento-profile-button,
+.comments .commento-root .commento-login .commento-login-text,
 .comments .commento-root .commento-sort-policy-buttons-container .commento-sort-policy-buttons .commento-sort-policy-button {
     color: #535353;
 }
